@@ -8,6 +8,8 @@
   <script type="text/javascript" src="libraries/p5.dom.js"></script>
   <script type="text/javascript" src="libraries/p5.sound.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
+  <script type="text/javascript" src="game.js"></script>
+  <script type="text/javascript" src="drawgame.js"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 
